# routes/index.js
@@ -1,7 +1,10 @@
 const express = require("express");
 
+const authRoutes = require("./auth");
 const membersRoutes = require("./members");
 const trainersRoutes = require("./trainers");
+const classesRoutes = require("./classes");
+const membershipsRoutes = require("./memberships");
 
 const router = express.Router();
 
@@ -11,12 +14,18 @@ router.get("/", (req, res) => {
     endpoints: {
       members: "/members",
       trainers: "/trainers",
+      classes: "/classes",
+      memberships: "/memberships",
+      authentication: "/auth/google",
       documentation: "/api-docs"
     }
   });
 });
 
+router.use("/auth", authRoutes);
 router.use("/members", membersRoutes);
 router.use("/trainers", trainersRoutes);
+router.use("/classes", classesRoutes);
+router.use("/memberships", membershipsRoutes);
 
 module.exports = router;
